add contact section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/service.css">
     <link rel="stylesheet" href="assets/css/Projects.css">
     <link rel="stylesheet" href="assets/css/Footer.css">
+    <link rel="stylesheet" href="assets/css/Contact.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +48,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#service">Services</a></li>
         <li><a href="#">Resume</a></li>
-        <li><a href="#">Projects</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Contacts</a></li>
     </ul>
@@ -60,7 +61,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#service">Services</a></li>
         <li><a href="#">Resume</a></li>
-        <li><a href="#">Projects</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Contacts</a></li>
     </div>
@@ -254,9 +255,9 @@
                 <div class="cardP">
 
                     <div class="iconContainer">
-                        <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
-                        <!--                        <i class="fa-solid fa-up-right-from-square"></i>-->
-                        <i class="fa-brands fa-github icon"></i>
+                        <a href="" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square icon"></i></a>
+                        <a href="" target="_blank"><i class="fa-brands fa-github icon"></i></i></a>
+
                     </div>
 
                     <div class="cardTitle">
@@ -279,9 +280,10 @@
                 <div class="cardP">
 
                     <div class="iconContainer">
-                        <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
-                        <!--                        <i class="fa-solid fa-up-right-from-square"></i>-->
-                        <i class="fa-brands fa-github icon"></i>
+                        <a href="" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square icon"></i></a>
+                        <a href="https://github.com/DhanushkaTA/Hostel-Management-System-Hibernate.git" target="_blank">
+                            <i class="fa-brands fa-github icon"></i>
+                        </a>
                     </div>
 
                     <div class="cardTitle">
@@ -304,9 +306,13 @@
                 <div class="cardP">
 
                     <div class="iconContainer">
-                        <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
-                        <!--                        <i class="fa-solid fa-up-right-from-square"></i>-->
-                        <i class="fa-brands fa-github icon"></i>
+                        <a href="https://drive.google.com/drive/folders/1v8TK5sGn1hUrpwZIEEZf5BPjZQsj8_wM?usp=sharing"
+                           target="_blank">
+                            <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
+                        </a>
+                        <a href="https://github.com/DhanushkaTA/Assigment01-IT.git" target="_blank">
+                            <i class="fa-brands fa-github icon"></i>
+                        </a>
                     </div>
 
                     <div class="cardTitle">
@@ -325,9 +331,12 @@
                 <div class="cardP">
 
                     <div class="iconContainer">
-                        <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
-                        <!--                        <i class="fa-solid fa-up-right-from-square"></i>-->
-                        <i class="fa-brands fa-github icon"></i>
+                        <a href="https://dhanushkata.github.io/My_Web-Assigment2-/" target="_blank">
+                            <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
+                        </a>
+                        <a href="https://github.com/DhanushkaTA/My_Web-Assigment2-.git" target="_blank">
+                            <i class="fa-brands fa-github icon"></i>
+                        </a>
                     </div>
 
                     <div class="cardTitle">
@@ -346,9 +355,10 @@
                 <div class="cardP">
 
                     <div class="iconContainer">
-                        <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
-                        <!--                        <i class="fa-solid fa-up-right-from-square"></i>-->
-                        <i class="fa-brands fa-github icon"></i>
+                        <a href="https://dhanushkata.github.io/Assigment03-IT/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square icon"></i></a>
+                        <a href="https://github.com/DhanushkaTA/Assigment03-IT.git" target="_blank">
+                            <i class="fa-brands fa-github icon"></i>
+                        </a>
                     </div>
 
                     <div class="cardTitle">
@@ -367,9 +377,12 @@
                 <div class="cardP">
 
                     <div class="iconContainer">
-                        <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
-                        <!--                        <i class="fa-solid fa-up-right-from-square"></i>-->
-                        <i class="fa-brands fa-github icon"></i>
+                        <a href="https://dhanushkata.github.io/Assignment04-IT/" target="_blank">
+                            <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
+                        </a>
+                        <a href="https://github.com/DhanushkaTA/Assignment04-IT.git" target="_blank">
+                            <i class="fa-brands fa-github icon"></i>
+                        </a>
                     </div>
 
                     <div class="cardTitle">
@@ -385,12 +398,112 @@
 
             </div>
 
-
-
         </section>
     </section>
 
-    <!------------------------------Projects---------------------------------------->
+    <!------------------------------Contact---------------------------------------->
+
+    <section class="contact" id="contact">
+
+        <div class="contactContainer">
+            <div class="contactTitle">
+                <h1>Get in Touch!</h1>
+            </div>
+            <div class="wrapperBox">
+                <!------Message------>
+                <div class="form box">
+                    <h2>Sent your message</h2>
+
+                    <form class="formWrapper">
+                        <div class="row1">
+                           <div class="inputContainer">
+                               <label for="fName">First Name</label>
+                               <input type="text" id="fName" >
+                           </div>
+
+                            <div class="inputContainer">
+                                <label for="lName">Last Name</label>
+                                <input type="text" id="lName" >
+                            </div>
+                        </div>
+
+                        <div class="row2">
+                            <div class="inputContainer">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" >
+                            </div>
+
+                            <div class="inputContainer">
+                                <label for="projects">Phone Number</label>
+                                <input type="tel" id="phoneNum" >
+                            </div>
+                        </div>
+
+                        <div class="row3">
+                            <div class="inputContainer">
+                                <label for="message">Message</label>
+                                <textarea id="message" placeholder="write your message here..."></textarea>
+                            </div>
+                        </div>
+
+                        <div class="row4">
+                            <div class="inputContainer">
+                                <input type="submit" value="Submit" id="submitBtn">
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+
+                <!------Map------>
+                <div class="map box">
+<!--                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d995.9277692944958!2d80.-->
+<!--                    50856967799146!3d6.01652319299836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.-->
+<!--                    1!3m3!1m2!1s0x3ae140f0b35478af%3A0x8a244e71d5ee841f!2sKirimatimulla!5e1!3m2!1sen!2slk!4v1685452304326!5m2!1sen!2slk"-->
+<!--                             style="border:0;" allowfullscreen="" loading="lazy"-->
+<!--                            referrerpolicy="no-referrer-when-downgrade"></iframe>-->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1983.921283269049!2d80.
+                    50812979571305!3d6.0163418074137835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+                    1!3m3!1m2!1s0x3ae140f0b35478af%3A0x8a244e71d5ee841f!2sKirimatimulla!5e0!3m2!1sen!2slk!4v1685452687705!5m2!1sen!2slk"
+                            style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+
+                <!------Info------>
+                <div class="info box">
+                    <h3>Contact Details</h3>
+                    <div class="infoBox">
+                        <div>
+                            <span><i class="fa-solid fa-location-dot"></i></span>
+                            <p>"Abhayasiri",<br>Kirimatimulla,Thelijjawila,<br>Mathara<br>Sri Lanka</p>
+                        </div>
+
+                        <div>
+                            <span><i class="fa-solid fa-paper-plane"></i></span>
+                            <a href="mailto:dhnaushka999ta@gmail.com">dhnaushka999ta@gmail.com</a>
+                        </div>
+
+                        <div>
+                            <span><i class="fa-solid fa-phone"></i></span>
+                            <a href="tel:+94702037168">+94 702 037 168</a>
+                        </div>
+
+                        <div class="socialMediaItem ">
+                            <ul>
+                                <li><a><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a><i class="fa-brands fa-instagram"></i></a></li>
+                                <li><a><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
+    <!------------------------------Footer---------------------------------------->
 
     <footer class="footer" id="footer">
 
