add resume section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="assets/css/Projects.css">
     <link rel="stylesheet" href="assets/css/Footer.css">
     <link rel="stylesheet" href="assets/css/Contact.css">
-    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/Resume.css">
+<!--    <link rel="stylesheet" href="assets/css/normalize.css">-->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -125,9 +126,10 @@
             <img src="assets/img/new(1).png">
         </div>
     </section>
-    
-    
+
+
     <section>
+
         <section class="about" id="about">
             <div class="imgCv">
                 <img src="assets/img/cv_photo.png">
@@ -242,7 +244,53 @@
 
         </section>
 
-        <!------------------------------Projects---------------------------------------->
+    <!------------------------------Resume---------------------------------------->
+
+        <section class="resume" id="resume">
+
+            <div class="title">
+                <h1>Resume</h1>
+            </div>
+
+            <div class="timeLine">
+
+                <div class="container-timeLine left">
+                    <div class="point"></div>
+                    <div class="text-box">
+                        <h2>O/L (2015)</h2>
+                        <small>2015</small>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ad assumenda at atque commodi eaque exercitationem hic inventore iste, maxime nemo neque non
+                            pariatur perspiciatis praesentium provident quod reiciendis sapiente totam.</p>
+                        <span class="left-arrow"></span>
+                    </div>
+                </div>
+
+                <div class="container-timeLine right">
+                    <div class="point"></div>
+                    <div class="text-box">
+                        <h2>A/L (2018)</h2>
+                        <small>2018</small>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ad assumenda at atque commodi eaque exercitationem hic inventore iste, maxime nemo neque non pariatur perspiciatis praesentium provident quod reiciendis sapiente totam.</p>
+                        <span class="right-arrow"></span>
+                    </div>
+                </div>
+
+                <div class="container-timeLine left">
+                    <div class="point"></div>
+                    <div class="text-box">
+                        <h2>GDSE</h2>
+                        <small>2022-2024</small>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Ad assumenda at atque commodi eaque exercitationem hic inventore iste, maxime nemo neque non pariatur perspiciatis praesentium provident quod reiciendis sapiente totam.</p>
+                        <span class="left-arrow"></span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    <!------------------------------Projects---------------------------------------->
 
         <section id="projects" class="projects">
 
@@ -540,17 +588,8 @@
                         <h4>&#169;All Right Reserved</h4>
                     </div>
                 </section>
-
             </div>
-
-
-
-
-
         </section>
-
-
-
     </footer>
 
 </main>
