add new text to resume section

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                     <li>Java</li>
                     <li>JavaFx</li>
                     <li>MySQL</li>
+                    <li>Hibernate</li>
                     <li>CSS</li>
                     <li>HTML</li>
                     <li>JavaScript</li>
@@ -259,9 +260,9 @@
                     <div class="text-box">
                         <h2>O/L (2015)</h2>
                         <small>2015</small>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Ad assumenda at atque commodi eaque exercitationem hic inventore iste, maxime nemo neque non
-                            pariatur perspiciatis praesentium provident quod reiciendis sapiente totam.</p>
+                        <p>Secondary Education<br>
+                            Grade(11)<br>
+                            I done my O/L exam in 2015(A8 S1).</p>
                         <span class="left-arrow"></span>
                     </div>
                 </div>
@@ -271,8 +272,9 @@
                     <div class="text-box">
                         <h2>A/L (2018)</h2>
                         <small>2018</small>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Ad assumenda at atque commodi eaque exercitationem hic inventore iste, maxime nemo neque non pariatur perspiciatis praesentium provident quod reiciendis sapiente totam.</p>
+                        <p>Secondary Education<br>
+                            Grade(13)<br>
+                            I done my A/L exam in 2018(C1 S2/Bio).</p>
                         <span class="right-arrow"></span>
                     </div>
                 </div>
@@ -282,8 +284,18 @@
                     <div class="text-box">
                         <h2>GDSE</h2>
                         <small>2022-2024</small>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Ad assumenda at atque commodi eaque exercitationem hic inventore iste, maxime nemo neque non pariatur perspiciatis praesentium provident quod reiciendis sapiente totam.</p>
+                        <p>Present<br>
+                           Higher Education<br>
+                           I started my higher education at IJSE.</p>
+                        <ul class="lanList lngList">
+                            <li>Java</li>
+                            <li>JavaFx</li>
+                            <li>MySql</li>
+                            <li>Hibernate</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JS</li>
+                        </ul>
                         <span class="left-arrow"></span>
                     </div>
                 </div>
@@ -344,7 +356,7 @@
                         <li>Java</li>
                         <li>JavaFx</li>
                         <li>MySql</li>
-                        <li>Hibonet</li>
+                        <li>Hibernate</li>
                         <li>CSS</li>
                     </ul>
                 </div>
