--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Web</title>
+    <meta name="author" content="Tahrindu Dhanushka Abeywickrama">
+    <meta name="description" content="This is my web site.I'm first year student
+    at IJSE(Institute of Software Engineering).Creating a personal website is a great way for software
+    engineers to showcase their portfolio and skills. Learn how to build a great personal website using HTML,CSS,JS
+    and other tools.">
+    <meta property="og:image"
+          content="assets/img/meta_icon.jpg" />
+    <meta property="og:description"
+          content="I'm web developer" />
+    <meta property="og:title" content="Tharindu's personal web site" />
+
+    <title>Tharindu Dhanushka</title>
+
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/nav_bar.css">
     <link rel="stylesheet" href="assets/css/logo.css">
@@ -16,7 +28,6 @@
     <link rel="stylesheet" href="assets/css/Footer.css">
     <link rel="stylesheet" href="assets/css/Contact.css">
     <link rel="stylesheet" href="assets/css/Resume.css">
-<!--    <link rel="stylesheet" href="assets/css/normalize.css">-->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -453,6 +464,110 @@
 
                     <ul class="lanList">
                         <li>HTML</li>
+                    </ul>
+                </div>
+
+
+                <!---------------Card 07----------------->
+
+                <div class="cardP">
+
+                    <div class="iconContainer">
+                        <a title="Demo" href="https://dhanushkata.github.io/Assignment05-IT/" target="_blank">
+                            <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
+                        </a>
+                        <a title="Github" href="https://github.com/DhanushkaTA/Assignment05-IT.git" target="_blank">
+                            <i class="fa-brands fa-github icon"></i>
+                        </a>
+                    </div>
+
+                    <div class="cardTitle">
+                        <h3>
+                            Assigment 05 -IT
+                        </h3>
+                    </div>
+
+                    <ul class="lanList">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                </div>
+
+                <!---------------Card 08----------------->
+
+                <div class="cardP">
+
+                    <div class="iconContainer">
+                        <a title="Demo" href="https://dhanushkata.github.io/POS-System-Assigment_06-/" target="_blank">
+                            <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
+                        </a>
+                        <a title="Github" href="https://github.com/DhanushkaTA/POS-System-Assigment_06-.git" target="_blank">
+                            <i class="fa-brands fa-github icon"></i>
+                        </a>
+                    </div>
+
+                    <div class="cardTitle">
+                        <h3>
+                            Assigment 06 -IT (POS)
+                        </h3>
+                    </div>
+
+                    <ul class="lanList">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                    </ul>
+                </div>
+
+                <!---------------Card 09----------------->
+
+                <div class="cardP">
+
+                    <div class="iconContainer">
+                        <a title="Demo" href="https://dhanushkata.github.io/POS-System-Assigment_06-/" target="_blank">
+                            <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
+                        </a>
+                        <a title="Github" href="https://github.com/DhanushkaTA/POS-System-Assigment_06-.git" target="_blank">
+                            <i class="fa-brands fa-github icon"></i>
+                        </a>
+                    </div>
+
+                    <div class="cardTitle">
+                        <h3>
+                            Assigment 07 -IT (POS -Single Page)
+                        </h3>
+                    </div>
+
+                    <ul class="lanList">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                    </ul>
+                </div>
+
+                <!---------------Card 10----------------->
+
+                <div class="cardP">
+
+                    <div class="iconContainer">
+                        <a title="Demo" href="https://dhanushkata.github.io/Assignment10-IT/" target="_blank">
+                            <i class="fa-solid fa-arrow-up-right-from-square icon"></i>
+                        </a>
+                        <a title="Github" href="https://github.com/DhanushkaTA/Assignment10-IT.git" target="_blank">
+                            <i class="fa-brands fa-github icon"></i>
+                        </a>
+                    </div>
+
+                    <div class="cardTitle">
+                        <h3>
+                            Assigment 10 -IT (Calculator)
+                        </h3>
+                    </div>
+
+                    <ul class="lanList">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
                     </ul>
                 </div>
 
