add stayle to home

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
             font-family: 'Poppins', sans-serif;
         }
 
-
-
+        ::selection{
+            background-color: crimson;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -103,11 +105,11 @@
 
             <!---------------------------------    CV Download Button --------------------------------------- -->
 
-            <div class="btnCover">
-                <div class="cvBtn">
-                    Download CV
-                </div>
-            </div>
+<!--            <div class="btnCover">-->
+<!--                <div class="cvBtn">-->
+<!--                    Download CV-->
+<!--                </div>-->
+<!--            </div>-->
             <!----------------------------- socialMedia Links ---------------------->
             <ul class="socialMedia">
                 <li>
