--- a/assets/Assigments/POS/Assigment_11/index.html
+++ b/assets/Assigments/POS/Assigment_11/index.html
@@ -821,7 +821,7 @@
 <script src="assets/jquery/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
-
+<script type="module" src="DB/DB.js"></script>
 <script type="module" src="controller/CustomerController.js"></script>
 <script type="module" src="controller/ItemController.js"></script>
 <script type="module" src="controller/OrderController.js"></script>
