--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/nav_bar2.css">
-<!--    <link rel="stylesheet" href="assets/css/nav_bar.css">-->
+    <link rel="stylesheet" href="assets/css/nav_bar.css">
     <link rel="stylesheet" href="assets/css/logo.css">
     <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="assets/css/title.css">
@@ -1897,9 +1897,10 @@
                 </div>
 
                 <section class="developDetails ">
+                    <h4>Developed by</h4>
                     <div>
-                        <h4>Developed by Tharindu Dhanushka Abeywickrama</h4>
-                        <h4>&#169;All Right Reserved</h4>
+                        <h5>Developed by Tharindu Dhanushka Abeywickrama</h5>
+                        <h5>&#169;All Right Reserved</h5>
                     </div>
                 </section>
             </div>
