remove list in navbar

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <li><a href="#service">Services</a></li>
             <li><a href="#resume">Resume</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#">Gallery</a></li>
+<!--            <li><a href="#">Gallery</a></li>-->
             <li><a href="#contact">Contacts</a></li>
         </ol>
         <label for="check" class="fa-solid fa-bars" id="toggle_btn"></label>
