--- a/assets/Assigments/POS/Assigment_11/index.html
+++ b/assets/Assigments/POS/Assigment_11/index.html
@@ -219,7 +219,7 @@
                 <div class="col-12 col-sm-4 mt-4">
                     <div class="card" style="width:100%">
                         <div class="card-body">
-                            <h5 class="card-title ">This Month Income</h5>
+                            <h5 class="card-title ">Today Income</h5>
                             <h1><i class="fa-solid fa-landmark"></i> RS.</h1>
                             <p id="lblToday" class="fw-bolder fs-1 lh-lg">4564654</p>
                         </div>
