--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         html{
             scroll-behavior: smooth;
         }
-        .about,.resume{
+        .about,.resume,.home,#home{
             overflow: hidden;
         }
         body{
@@ -129,7 +129,7 @@
 
     <section class="home" id="home">
 
-        <div class="txtContainer">
+        <div class="txtContainer" data-aos="fade-right">
             <!----------------------------- Welcome text ---------------------->
             <div class="wrapper">
                 <div class="welcome">
@@ -177,7 +177,7 @@
             </ul>
         </div>
 
-        <div class="imgBox">
+        <div class="imgBox" data-aos="zoom-in">
             <img src="assets/img/new(1).png">
         </div>
     </section>
@@ -303,6 +303,12 @@
                         <div class="icon">
                             <i class="fa-solid fa-mobile-screen-button"></i>
                         </div>
+                        <div>
+                            <p>
+                                Mobile apps
+                                Android and iOS
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -379,8 +385,8 @@
                 <div class="cardP" data-aos="zoom-in" data-aos-delay="500">
 
                     <div class="iconContainer">
-                        <a title="Demo" href="" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square icon"></i></a>
-                        <a title="Github" href="" target="_blank"><i class="fa-brands fa-github icon"></i></i></a>
+                        <a title="Demo" href="#" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square icon"></i></a>
+                        <a title="Github" href="#" target="_blank"><i class="fa-brands fa-github icon"></i></i></a>
 
                     </div>
 
@@ -408,7 +414,7 @@
                 <div class="cardP" data-aos="zoom-in" data-aos-delay="700">
 
                     <div class="iconContainer">
-                        <a title="Demo" href="" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square icon"></i></a>
+                        <a title="Demo" href="https://github.com/DhanushkaTA/Hostel-Management-System-Hibernate.git" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square icon"></i></a>
                         <a title="Github" href="https://github.com/DhanushkaTA/Hostel-Management-System-Hibernate.git" target="_blank">
                             <i class="fa-brands fa-github icon"></i>
                         </a>
